--- a/views/index.html
+++ b/views/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Logans Awesome Social media app!</title>
+    <title>Logans Homework 1!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
 </head>
 <body>
     <h1>Testing...</h1>
-    <p>I hope this works lol...</p>
+    <p>I hope this works lol... this is the homework 1</p>
 </body>
 </html>
