styled the css skin

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,137 @@
-*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%}body{font:16px Helvetica, Arial}main{display:flex;height:100%;flex-direction:row}.form-container,.messages{padding:20px}.form-container{flex:1;border:6px solid #bfcfd6;background-color:#e3edf1}.form-container label{display:block;margin-bottom:0.5rem}.messages{flex:2;background-color:#eee;border:6px solid #e2e0e0}input,textarea{display:block;width:100%;border:2px solid #bfcfd6;border-radius:4px;font-size:0.8rem;padding:0.4rem;border-style:solid}textarea{height:135px}form{padding:3px;margin:12px auto}form input[type=submit]{width:auto;padding:10px;background-color:#4bc811;margin-top:1rem;border-radius:8px;color:white;cursor:pointer;text-transform:uppercase;font-weight:bold}#messages{list-style-type:none;margin:0;padding:0}#messages li{padding:5px 10px}#messages li:nth-child(odd){background:#eee}.new-message{width:45%;padding:8px 12px;background-color:white;border-radius:8px;margin-bottom:1rem;float:left;clear:both}.new-message span{font-size:0.8rem;display:block;margin-bottom:2px}.my-message{float:right !important;background-color:#86bf9d;color:white}
+*
+{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
+html,body {
+    height:100%;
+}
+    
+body {
+    font:16px;
+    font-family: Futura, Arial;
+    color: black;
+}
+
+h1 {
+    font-weight: 150;
+}
+
+p {
+    font-size: 13px;
+}
+
+main {
+    display:flex;
+    height:100%;
+    flex-direction:row;
+}
+
+.form-container,.messages {
+    padding:20px;
+}
+
+.form-container {
+    flex:1;
+    border:6px solid #520000;
+    background-color:#ececec;
+    
+}
+.form-container label {
+    display:block;
+    margin-bottom:0.5rem;
+    font-size: 1rem;
+}
+
+label p {
+    color: #c3c3c3;
+    font-size: 13px;
+    font-style: italic;
+}
+
+.messages {
+    flex:2;
+    background-image:url(../images/concrete.png);
+    border:6px solid #c3c3c3;
+}
+
+input,textarea {
+    display:block;
+    width:100%;
+    border:2px solid #c1c1c1;
+    border-radius:0;
+    font-size:0.8rem;
+    padding:0.4rem;
+    border-style: dotted;
+    font-family: futura;
+}
+
+textarea {
+    height:135px;
+}
+
+form {
+    padding:3px;
+    margin:12px auto;
+}
+
+form input[type=submit]{ 
+    width:auto;
+    padding:10px;
+    border: none;
+    background-color:#c3c3c3;
+    margin-top:1rem;
+    border-radius:8px;
+    color: #520000;
+    cursor:pointer;
+    text-transform:uppercase;
+    font-family: futura;
+}
+
+form input[type=submit]:hover { 
+    background-color: #520000;
+    color: #c3c3c3;
+    transition: 1s;
+}
+
+#messages {
+    list-style-type:none;
+    margin:0;
+    padding:0;
+}
+
+#messages li {
+    padding:5px 10px;
+}
+
+#messages li:nth-child(odd){
+    background:white;
+}
+
+.new-message{
+    width:100%;
+    padding:8px 12px;
+    background-color:white;
+    border-radius:8px;
+    margin-bottom:1rem;
+    float:left;
+    clear:both;
+}
+
+.new-message span {
+    font-size:0.8rem;
+    color: grey;
+    display:inline;
+    font-style: italic;
+}
+
+.my-message {
+    border-radius: 0;
+    float:right !important;
+    background-color:transparent;
+    color:#520000;
+    border: 2px solid #520000 
+}
 /*# sourceMappingURL=main.css.map */
