--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,7 +36,7 @@ main {
 .form-container {
     flex:1;
     border:6px solid #520000;
-    background-color:#ececec;
+    background-color:rgb(236, 236, 236);;
     
 }
 .form-container label {
@@ -62,6 +62,7 @@ input,textarea {
     width:100%;
     border:2px solid #c1c1c1;
     border-radius:0;
+    background-color: rgb(236, 236, 236);
     font-size:0.8rem;
     padding:0.4rem;
     border-style: dotted;
