--- a/public/css/main.css
+++ b/public/css/main.css
@@ -134,7 +134,7 @@ form input[type=submit]:hover {
     border-radius: 8px;
     font-size: 0.8rem;
     float:right !important;
-    background-color:white;
+    background-color:#cecece;
     color:#520000;
     border: 2px solid #520000 
 }
